updates initialize function and constant arrays

--- a/crook-county/index.htm
+++ b/crook-county/index.htm
@@ -10,34 +10,34 @@
   <body>
     <main>
       <section class="top-row">
-        <div class="player-score">P1 Score</div>
+        <div class="player">P2 Score</div>
         <div class="title">Mancala</div>
-        <div class="player-score">P2 Score</div>
+        <div class="player">P1 Score</div>
       </section>
       <section class="second-row">
-        <div class="current-score">$2112</div>
+        <div class="current-score" id="p2-score">$2112</div>
         <div class="prompt">whose move/winner</div>
-        <div class="current-score">$2001</div>
+        <div class="current-score" id="p1-score">$2001</div>
       </section>
       <section class="third-row">
         <div class="player-direction">-===Player 2</div>
       </section>
       <section class="fourth-row">
         <div class="board">
-          <div class="p2-bank">p2- bank</div>
-          <div class="house">p2-1</div>
-          <div class="house">p2-2</div>
-          <div class="house">p2-3</div>
-          <div class="house">p2-4</div>
-          <div class="house">p2-5</div>
-          <div class="house">p2-6</div>
-          <div class="house">p1-6</div>
-          <div class="house">p1-5</div>
-          <div class="house">p1-4</div>
-          <div class="house">p1-3</div>
-          <div class="house">p1-2</div>
-          <div class="house">p1-1</div>
-          <div class="p1-bank">p1- bank</div>
+          <div class="bank" id="p2-bank">p2- bank</div>
+          <div class="house" id="p2h1">p2-1</div>
+          <div class="house" id="p2h2">p2-2</div>
+          <div class="house" id="p2h3">p2-3</div>
+          <div class="house" id="p2h4">p2-4</div>
+          <div class="house" id="p2h5">p2-5</div>
+          <div class="house" id="p2h6">p2-6</div>
+          <div class="house" id="p1h6">p1-6</div>
+          <div class="house" id="p1h5">p1-5</div>
+          <div class="house" id="p1h4">p1-4</div>
+          <div class="house" id="p1h3">p1-3</div>
+          <div class="house" id="p1h2">p1-2</div>
+          <div class="house" id="p1h1">p1-1</div>
+          <div class="bank" id="p1-bank">p1- bank</div>
         </div>
       </section>
       <section class="fifth-row">
