--- a/crook-county/index.htm
+++ b/crook-county/index.htm
@@ -24,20 +24,20 @@
       </section>
       <section class="fourth-row">
         <div class="board">
-          <div class="bank" id="p2-bank">p2- bank</div>
-          <div class="house" id="p2h1">p2-1</div>
-          <div class="house" id="p2h2">p2-2</div>
-          <div class="house" id="p2h3">p2-3</div>
-          <div class="house" id="p2h4">p2-4</div>
-          <div class="house" id="p2h5">p2-5</div>
-          <div class="house" id="p2h6">p2-6</div>
-          <div class="house" id="p1h6">p1-6</div>
-          <div class="house" id="p1h5">p1-5</div>
-          <div class="house" id="p1h4">p1-4</div>
-          <div class="house" id="p1h3">p1-3</div>
-          <div class="house" id="p1h2">p1-2</div>
-          <div class="house" id="p1h1">p1-1</div>
-          <div class="bank" id="p1-bank">p1- bank</div>
+          <div class="bank p2" id="p2-bank">p2- bank</div>
+          <div class="house p1 p2" id="p2h1">p2-1</div>
+          <div class="house p1 p2" id="p2h2">p2-2</div>
+          <div class="house p1 p2" id="p2h3">p2-3</div>
+          <div class="house p1 p2" id="p2h4">p2-4</div>
+          <div class="house p1 p2" id="p2h5">p2-5</div>
+          <div class="house p1 p2" id="p2h6">p2-6</div>
+          <div class="house p1 p2" id="p1h6">p1-6</div>
+          <div class="house p1 p2" id="p1h5">p1-5</div>
+          <div class="house p1 p2" id="p1h4">p1-4</div>
+          <div class="house p1 p2" id="p1h3">p1-3</div>
+          <div class="house p1 p2" id="p1h2">p1-2</div>
+          <div class="house p1 p2" id="p1h1">p1-1</div>
+          <div class="bank p1" id="p1-bank">p1- bank</div>
         </div>
       </section>
       <section class="fifth-row">
