highlights winner name

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <main>
       <section class="top-row">
-        <div class="player">P2 Score</div>
+        <div class="player" id="p2Name">P2 Score</div>
         <div class="title">Mancala</div>
-        <div class="player">P1 Score</div>
+        <div class="player" id="p1Name">P1 Score</div>
       </section>
       <section class="second-row">
         <div class="current-score" id="p2-score">$2112</div>
